# cumath_cmake_basic

./: CMakeLists.txt  README.md  cublas_test.cpp  main.cpp  perlmutter.sh
